[Resources] split .qrc into complete and empty

--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -48,5 +48,6 @@
         <file>icons/calculator.svg</file>
         <file>icons/download.svg</file>
         <file>ui/DocumentListView.qml</file>
+        <file>ui/MaterialButton.qml</file>
     </qresource>
 </RCC>
