[Calculator] fix expectency

--- a/src/resources/empty.qrc
+++ b/src/resources/empty.qrc
@@ -1,8 +1,8 @@
 <RCC>
     <qresource prefix="/">
-        <file>ui/empty/DownloadButton.qml</file>
-        <file>ui/empty/FolderButton.qml</file>
-        <file>ui/empty/ReportButton.qml</file>
-        <file>ui/empty/UrlProvider.qml</file>
+        <file alias="ui/DownloadButton.qml">ui/empty/DownloadButton.qml</file>
+        <file alias="ui/FolderButton.qml">ui/empty/FolderButton.qml</file>
+        <file alias="ui/ReportButton.qml">ui/empty/ReportButton.qml</file>
+        <file alias="ui/UrlProvider.qml">ui/empty/UrlProvider.qml</file>
     </qresource>
 </RCC>
