--- a/src/resources/complete.qrc
+++ b/src/resources/complete.qrc
@@ -1,8 +1,8 @@
 <RCC>
-    <qresource prefix="/">
-        <file alias="ui/DownloadButton.qml">ui/complete/DownloadButton.qml</file>
-        <file alias="ui/FolderButton.qml">ui/complete/FolderButton.qml</file>
-        <file alias="ui/ReportButton.qml">ui/complete/ReportButton.qml</file>
-        <file alias="ui/UrlProvider.qml">ui/complete/UrlProvider.qml</file>
+    <qresource prefix="/ui">
+        <file alias="DownloadButton.qml">ui/complete/DownloadButton.qml</file>
+        <file alias="FolderButton.qml">ui/complete/FolderButton.qml</file>
+        <file alias="ReportButton.qml">ui/complete/ReportButton.qml</file>
+        <file alias="UrlProvider.qml">ui/complete/UrlProvider.qml</file>
     </qresource>
 </RCC>
