[Models] fix sorting

--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -30,6 +30,7 @@
         <file alias="SettingsDialog.qml">ui/SettingsDialog.qml</file>
         <file alias="SwissCantons.qml">ui/SwissCantons.qml</file>
         <file alias="TopBar.qml">ui/TopBar.qml</file>
+        <file alias="PhotoBooth.qml">ui/PhotoBooth.qml</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="ViageLogo.svg">images/ViageLogo.svg</file>
@@ -55,5 +56,8 @@
         <file alias="arrow-right.svg">icons/arrow-right.svg</file>
         <file alias="calculator.svg">icons/calculator.svg</file>
         <file alias="camera.svg">icons/camera.svg</file>
+    </qresource>
+    <qresource prefix="/data">
+        <file alias="ofs.csv">ofs.csv</file>
     </qresource>
 </RCC>
