--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -58,10 +58,10 @@
         <file alias="camera.svg">icons/camera.svg</file>
         <file alias="moon.svg">icons/moon.svg</file>
         <file alias="sun.svg">icons/sun.svg</file>
-        <file alias="user.svg">icons/user.svg</file>
-        <file alias="cog.svg">icons/cog.svg</file>
         <file alias="checked-square.svg">icons/check-square.svg</file>
         <file alias="door-open.svg">icons/door-open.svg</file>
+        <file alias="lock-open.svg">icons/lock-open.svg</file>
+        <file alias="lock.svg">icons/lock.svg</file>
     </qresource>
     <qresource prefix="/data">
         <file alias="ofs.csv">ofs.csv</file>
