[netManager] catch errors before callbacks and display them in the ErrorDialog

--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -34,6 +34,7 @@
         <file alias="UserFullDelegate.qml">ui/UserFullDelegate.qml</file>
         <file alias="PwdField.qml">ui/PwdField.qml</file>
         <file alias="StateLayout.qml">ui/StateLayout.qml</file>
+        <file alias="ErrorDialog.qml">ui/ErrorDialog.qml</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="ViageLogo.svg">images/ViageLogo.svg</file>
