[UI] Drag and drop documents

--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -35,6 +35,7 @@
         <file alias="PwdField.qml">ui/PwdField.qml</file>
         <file alias="StateLayout.qml">ui/StateLayout.qml</file>
         <file alias="ErrorDialog.qml">ui/ErrorDialog.qml</file>
+        <file alias="FileDropRect.qml">ui/FileDropRect.qml</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="ViageLogo.svg">images/ViageLogo.svg</file>
