--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -34,7 +34,7 @@
         <file alias="UserFullDelegate.qml">ui/UserFullDelegate.qml</file>
         <file alias="PwdField.qml">ui/PwdField.qml</file>
         <file alias="StateLayout.qml">ui/StateLayout.qml</file>
-        <file alias="ErrorDialog.qml">ui/ErrorDialog.qml</file>
+        <file alias="ExceptionDialog.qml">ui/ExceptionDialog.qml</file>
         <file alias="FileDropRect.qml">ui/FileDropRect.qml</file>
         <file alias="PhoneChooser.qml">ui/PhoneChooser.qml</file>
     </qresource>
