[Calculator] include DucKx 3rdparty

--- a/src/resources/viage.qrc
+++ b/src/resources/viage.qrc
@@ -71,5 +71,6 @@
     </qresource>
     <qresource prefix="/data">
         <file alias="ofs.csv">ofs.csv</file>
+        <file alias="calcul.docx">calcul.docx</file>
     </qresource>
 </RCC>
