[client] load german transaltion

--- a/client/resources/viage.qrc
+++ b/client/resources/viage.qrc
@@ -74,4 +74,8 @@
         <file alias="ofs.csv">ofs.csv</file>
         <file alias="calcul.docx">calcul.docx</file>
     </qresource>
+    <qresource prefix="/qm_files">
+        <file alias="viage_de.qm">qm_files/viage_de.qm</file>
+        <file alias="viage_fr.qm">qm_files/viage_fr.qm</file>
+    </qresource>
 </RCC>
