[UI] only validate contacts with continueButton and only validate documents with finishButton

--- a/client/resources/viage.qrc
+++ b/client/resources/viage.qrc
@@ -76,6 +76,6 @@
     </qresource>
     <qresource prefix="/qm_files">
         <file alias="viage_de.qm">qm_files/viage_de.qm</file>
-        <file alias="viage.fr">qm_files/viage_fr.qm</file>
+        <file alias="viage_fr.qm">qm_files/viage_fr.qm</file>
     </qresource>
 </RCC>
