[translation] editing docx in german

--- a/client/resources/viage.qrc
+++ b/client/resources/viage.qrc
@@ -72,6 +72,7 @@
     </qresource>
     <qresource prefix="/data">
         <file alias="ofs.csv">ofs.csv</file>
+        <file alias="berechnung.docx">berechnung.docx</file>
         <file alias="calcul.docx">calcul.docx</file>
     </qresource>
     <qresource prefix="/qm_files">
